docs: updating swagger docs
