# docs/swagger.yaml
@@ -103,21 +103,6 @@ definitions:
       transfer:
         $ref: '#/definitions/db.Transfer'
     type: object
-  db.User:
-    properties:
-      created_at:
-        type: string
-      email:
-        type: string
-      full_name:
-        type: string
-      hashed_password:
-        type: string
-      password_changed_at:
-        type: string
-      username:
-        type: string
-    type: object
 info:
   contact:
     email: cardoso.business.ctt@gmail.com
@@ -339,7 +324,7 @@ paths:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/db.User'
+            $ref: '#/definitions/api.userResponse'
         "400":
           description: User already exists!
       summary: Create an user
